<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/article_menuitem_reply" android:showAsAction="ifRoom" android:title="@string/reply_thread" android:icon="@android:drawable/ic_menu_edit"></item>
    <item android:id="@+id/article_menuitem_refresh" android:showAsAction="ifRoom" android:title="@string/refresh" android:icon="@drawable/ic_menu_refresh"></item>
    <item android:id="@+id/article_menuitem_addbookmark" android:showAsAction="ifRoom" android:title="@string/bookmark" android:icon="@android:drawable/btn_star_big_on"></item>
    <item android:id="@+id/article_menuitem_back" android:showAsAction="ifRoom" android:title="@string/back" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
    

</menu>