<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBox_down_img_no_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nowifi_downimg"/>

        <CheckBox
            android:id="@+id/checkBox_download_avatar_no_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/download_avatar_nowifi" />

        <CheckBox
            android:id="@+id/checkBox_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nightmode" />

        <CheckBox
            android:id="@+id/checkBox_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/notification_on" />

        <CheckBox
            android:id="@+id/checkBox_notification_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/notification_sound" />

        <TextView
            android:id="@+id/textView_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_size" />

        <SeekBar
            android:id="@+id/fontsize_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="20dp" />

        <WebView
            android:id="@+id/websize_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <SeekBar
            android:id="@+id/webszie_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="20dp" />

    </LinearLayout>
