<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_wood" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp" >

        <Button
            android:id="@+id/reply_commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/commit" />

        <Button
            android:id="@+id/reply_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

    <EditText
        android:id="@+id/reply_titile_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/title" 
        android:textColor="@color/red" 
        android:background="@color/white"/>

    <EditText
        android:id="@+id/reply_body_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reply_titile_edittext"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:textColor="@@color/red" android:inputType="textMultiLine">

        <requestFocus />
    </EditText>

</RelativeLayout>
